	- Merge #523: fix: free() call more than once with the same pointer.
	- Merge #519: Support for selective enabling tcp-upstream for
	  stub/forward zones.
	- For #519: note stub-tcp-upstream and forward-tcp-upstream in
	  the example configuration file.
	- For #519: yacc and lex. And fix python bindings, and test program
	  unbound-dnstap-socket.
	- For #519: fix comments for doxygen.

5 August 2021: Wouter
	- Tag for 1.13.2rc1 release.
	- Fix #520: Unbound 1.13.2rc1 fails to build python module.

4 August 2021: George
	- Merge PR #415 from sibeream: Use
	  /proc/sys/net/ipv4/ip_local_port_range to determine available outgoing
	  ports. (New --enable-linux-ip-local-port-range configuration option)
	- Bump MAX_RESTART_COUNT to 11 from 8; in relation to #438. This
	  allows longer CNAME chains in Unbound.

4 August 2021: Wouter
	- In unit test use openssl set security level to allow keys in test.
	- Fix static analysis warnings about localzone locks that are unused.
	- Fix missing locks in zonemd unit test.
	- Fix readzone compile under debug config.
	- Fix out of sourcedir run of zonemd unit tests.
	- Fix libnettle zonemd unit test.
	- Fix unit test zonemd_reload for use in run_vm.

3 August 2021: George
	- Listen to read or write events after the SSL handshake.
	  Sticky events on windows would stick on read when write was needed.

3 August 2021: Wouter
	- Merge PR #517 from dyunwei: #420 breaks the mesh reply list
	  function that need to reuse the dns answer.
	- Annotate assertion into error printout; we think it may be an
	  error, but the situation looks harmless.
	- Fix sign comparison warning on FreeBSD.

2 August 2021: Wouter
	- Prepare for OpenSSL 3.0.0 provider API usage, move the sldns
	  keyraw functions to produce EVP_PKEY results.
	- Move RSA and DSA to use OpenSSL 3.0.0 API.
	- Move ECDSA functions to use OpenSSL 3.0.0 API.
	- iana portlist update.
	- Fix verbose printout failure in tcp reuse unit test.

30 July 2021: Wouter